# synmatai-test-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  nohup.out  nohup_hot.out  pyproject.toml
src/agent_test_platform/: __init__.py  main.py
src/agent_test_platform/api/: multi_turn.py  node_config_routes.py  routes.py  schemas.py
src/agent_test_platform/config/: logger.py  node_dsl.yaml  node_strategy.py  settings.py  user_config.py
src/agent_test_platform/core/: conversation_executor.py  executor.py  node_executor.py  orchestrator.py  smart_orchestrator.py  state_machine.py
src/agent_test_platform/http_client/: client.py
src/agent_test_platform/integrations/: openai_client.py
src/agent_test_platform/models/: __init__.py  base.py  conversation_model.py  node_based.py  node_config_model.py  test_result.py  test_run.py  test_step.py  virtual_user.py
src/agent_test_platform/scenarios/: loader.py  model.py
src/agent_test_platform/services/: node_config_service.py  scenario_service.py
src/agent_test_platform/storage/: database.py  json_writer.py  query.py
src/agent_test_platform/ws/: manager.py  messages.py
src/tests/: config.py  generate_report.py  locustfile.py  mock_run_report.py  regen_report.py  run_all.py  run_ramp.py
src/tests/client/: ws_monitor.py
src/tests/core/: task_manager.py
src/tests/monitor/: system_monitor.py
src/tests/reporter/: html_renderer.py  md_renderer.py  report_writer.py
src/tests/reports/: patent_test_report.html  patent_test_report.json
(+2 files in other folders)
